# capbit

./: .gitignore  CLAUDE.md  COMPARISON.md  Cargo.toml  GUIDE.md  LICENSE  PLAN.md  README.md  REFACTOR.md  REFACTOR_CLAUDE.md  REFACTOR_PLAN.md  TEST_PLAN.md  V3_ROADMAP.md  build.sh  capbit_2.0.md  index.d.ts  index.js  package-lock.json  package.json  run_bench.sh  update.md  v2_refactor.md  v3_refactor.md  vitest.config.js
.cargo/: config.toml
.claude/agents/: rust-systems-tutor.md
capbit_data/journals/: 0
demo/: app.js  index.html  styles.css
docs/: BENCHMARK.md  CAPBIT_VS_ZANZIBAR.md  GUIDE.md  INTERLEAVED_REFACTOR_PLAN.md  NOVEL_USE_CASES.md  SIMULATION.md  TEST_PLAN.md  V3_ROADMAP.md
scripts/: server.sh
src/: auth.rs  bootstrap.rs  caps.rs  constants.rs  core.rs  db.rs  entity.rs  entity_id.rs  error.rs  keys.rs  lib.rs  planner.rs  protected.rs  read.rs  server.rs  tx.rs  write.rs
tests/: attack_vectors.rs  attack_vectors_extended.rs  auth.rs  authorized_operations.rs  batch_operations.rs  benchmarks.rs  capbit.test.js  demo_verbose.rs  inheritance.test.js  inheritance_advanced.rs  input_validation.rs  integration.rs  large_scale.rs  lib.rs  lib_test.rs  password_auth.rs  perf_check.rs  permission_boundaries.rs  protected_api.rs  protected_reads.rs  query_operations.rs  revocation.rs  scale.test.js  server_auth.rs  simulation.rs  type_system.rs
