[package]
name = "capbit"
version = "0.3.0"
edition = "2021"
description = "Minimal capability-based access control with u64 IDs and bitmask permissions"
license = "LicenseRef-CNCOSL"
repository = "https://github.com/tzvibm/capbit"
keywords = ["access-control", "authorization", "permissions", "capabilities", "lmdb"]
categories = ["authentication", "database"]

[lib]
crate-type = ["rlib"]

[dependencies]
heed = "0.20"
byteorder = "1.5"

[profile.release]
lto = true
