[package]
name = "capbit"
version = "0.3.0"
edition = "2021"
description = "Minimal capability-based access control with u64 IDs and bitmask permissions"
license = "LicenseRef-CNCOSL"
repository = "https://github.com/tzvibm/capbit"
keywords = ["access-control", "authorization", "permissions", "capabilities", "lmdb"]
categories = ["authentication", "database"]

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = []
napi = ["napi-rs", "napi-derive"]

[dependencies]
heed = "0.20"
byteorder = "1.5"
napi-rs = { package = "napi", version = "2", features = ["napi9"], optional = true }
napi-derive = { version = "2", optional = true }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
